--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div>
-            <p>asdfjlajdslfadslkjflakafdlk</p>
+            <p>Hello World!!!</p>
         </div>
     </body>
 </html>
