--- a/templates/login.html
+++ b/templates/login.html
@@ -7,13 +7,13 @@
             {% for field in form %}
                 <div>
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                    <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" >
+                    <input type="{{ field.field.widget.input_type }}" id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" >
                 </div>
                 {% if field.errors %}
                     <span style="color: red">{{ field.errors }}</span>
                 {% endif %}
             {% endfor %}
-            <button type="submit" class="btn btn-primary">로그인</button>
+            <button type="submit">로그인</button>
         </form>
     </body>
 </html>
