--- a/templates/board/board_list.html
+++ b/templates/board/board_list.html
@@ -1,29 +1,29 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>제목</th>
-                        <th>아이디</th>
-                        <th>일시</th>
+{% extends "base.html" %}
+
+{% block contents %}
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>제목</th>
+                    <th>아이디</th>
+                    <th>일시</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for board in boards %}
+                    <tr onclick="location.href='/board/detail/{{ board.id }}'">
+                        <th>{{ board.id }}</th>
+                        <th>{{ board.title }}</th>
+                        <th>{{ board.writer }}</th>
+                        <th>{{ board.registered }}</th>
                     </tr>
-                </thead>
-                <tbody>
-                    {% for board in boards %}
-                        <tr onclick="location.href='/board/detail/{{ board.id }}'">
-                            <th>{{ board.id }}</th>
-                            <th>{{ board.title }}</th>
-                            <th>{{ board.writer }}</th>
-                            <th>{{ board.registered }}</th>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </body>
-</html>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <button onclick="location.href='/board/write/'">글쓰기</button>
+    </div>
+{% endblock %}
