--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,13 +1,10 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <div>
-            <p>Hello World!!!</p>
-        </div>
-        {% if request.session.user %}
-            <div>{{ email }}</div>
-        {% endif %}
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block contents %}
+    <div>
+        <p>Hello World!!!</p>
+    </div>
+    {% if request.session.user %}
+        <div>{{ email }}</div>
+    {% endif %}
+{% endblock %}
