--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,19 +1,17 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <form method="POST" action=".">{% csrf_token %}
-            {% for field in form %}
-                <div>
-                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                    <input type="{{ field.field.widget.input_type }}" id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" >
-                </div>
-                {% if field.errors %}
-                    <span style="color: red">{{ field.errors }}</span>
-                {% endif %}
-            {% endfor %}
-            <button type="submit">로그인</button>
-        </form>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block contents %}
+    <form method="POST" action=".">
+        {% csrf_token %}
+        {% for field in form %}
+            <div>
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                <input type="{{ field.field.widget.input_type }}" id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" >
+            </div>
+            {% if field.errors %}
+                <span style="color: red">{{ field.errors }}</span>
+            {% endif %}
+        {% endfor %}
+        <button type="submit">로그인</button>
+    </form>
+{% endblock %}
