--- a/templates/board/board_list.html
+++ b/templates/board/board_list.html
@@ -25,5 +25,6 @@
     </div>
     <div>
         <button onclick="location.href='/board/write/'">글쓰기</button>
+        <button onclick="location.href='/'">돌아가기</button>
     </div>
 {% endblock %}
